add NotFoundException and delete Orderline model